--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
             "@radix-ui/react-tooltip": "^1.1.8",
             "@stripe/react-stripe-js": "^5.4.1",
             "@stripe/stripe-js": "^8.6.1",
+            "@supabase/supabase-js": "^2.90.1",
             "@tanstack/react-query": "^5.90.16",
             "@tanstack/react-query-devtools": "^5.91.2",
             "class-variance-authority": "^0.7.1",
